--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
         <h1>Portfolio</h1>
         <ul>
-           <a href=""><li>Home  </li></a> 
-           <a href=""><li>Portfolio  </li></a> 
-           <a href=""><li>Skills  </li></a> 
-          <a href=""><li>Contact </li></a>  
+           <a href="index.html"><li>Home  </li></a> 
+           <a href="#projects"><li>Projects  </li></a> 
+           <a href="#skills"><li>Skills  </li></a> 
+          <a href="#contact"><li>Contact </li></a>  
         </ul>
     </nav>
     <!-- Landing Section -->
